Infrastructure.yml
Parameters:
    EnvironmentName:
        Description: An Environment name that will be prefixed to resources
        Type: String

    VpcCIDR:
        Description: Please enter the IP range (CIDR notation) for the VpcCIDR
        Type: String
        Default: 10.0.0.0/16

    PublicSubnet1CIDR:
        Description: CidrBlock for PublicSubnet1
        Type: String
        Default: 10.0.1.0/24

    PublicSubnet2CIDR:
        Description: CidrBlock for PublicSubnet2
        Type: String
        Default: 10.0.2.0/24

    PrivateSubnet1CIDR:
        Description: CidrBlock for PrivateSubnet1
        Type: String
        Default: 10.0.3.0/24

    PrivateSubnet2CIDR:
        Description: CidrBlock for PublicSubnet2
        Type: String
        Default: 10.0.4.0/24

Resources:
    VPC:
        Type: AWS::EC2::VPC
        Properties:
            CidrBlock:
                Ref: VpcCIDR
            EnableDnsHostnames: true
            Tags:
                - Key: Name
                  Value:
                      Ref: EnvironmentName

    InternetGateway:
        Type: AWS::EC2::InternetGateway
        Properties:
            Tags:
                - Key: Name
                  Value:
                      Ref: EnvironmentName

    InternetGatewayAttachment:
        Type: AWS::EC2::VPCGatewayAttachment
        Properties:
            InternetGatewayId:
                Ref: InternetGateway
            VpcId:
                Ref: VPC

    PublicSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            AvailabilityZone:
                Fn::Select:
                    - 0
                    - Fn::GetAZs: ""
            CidrBlock:
                Ref: PublicSubnet1CIDR
            VpcId:
                Ref: VPC
            Tags:
                - Key: Name
                  Value:
                      Ref: EnvironmentName
                - Key: Subent
                  Value: "PublicSubnet1"

    PublicSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            AvailabilityZone:
                Fn::Select:
                    - 1
                    - Fn::GetAZs: ""
            CidrBlock:
                Ref: PublicSubnet2CIDR
            VpcId:
                Ref: VPC
            Tags:
                - Key: Name
                  Value:
                      Ref: EnvironmentName
                - Key: Subent
                  Value: "PublicSubnet2"

    PrivateSubnet1:
        Type: AWS::EC2::Subnet
        Properties:
            AvailabilityZone:
                Fn::Select:
                    - 0
                    - Fn::GetAZs: ""
            CidrBlock:
                Ref: PrivateSubnet1CIDR
            VpcId:
                Ref: VPC
            Tags:
                - Key: Name
                  Value:
                      Ref: EnvironmentName
                - Key: Subent
                  Value: "PrivateSubnet1"

    PrivateSubnet2:
        Type: AWS::EC2::Subnet
        Properties:
            AvailabilityZone:
                Fn::Select:
                    - 1
                    - Fn::GetAZs: ""
            CidrBlock:
                Ref: PrivateSubnet2CIDR
            VpcId:
                Ref: VPC
            Tags:
                - Key: Name
                  Value:
                      Ref: EnvironmentName
                - Key: Subent
                  Value: "PrivateSubnet2"

    ElasticIP1:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties:
            Domain:
                Ref: VPC
            Tags:
                - Key: Name
                  Value:
                      Ref: EnvironmentName

    NatGateway1:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId:
                Fn::GetAtt: [ElasticIP1, AllocationId]
            SubnetId:
                Ref: PublicSubnet1
            Tags:
                - Key: Name
                  Value:
                      Ref: EnvironmentName

    ElasticIP2:
        Type: AWS::EC2::EIP
        DependsOn: InternetGatewayAttachment
        Properties:
            Domain:
                Ref: VPC
            Tags:
                - Key: Name
                  Value:
                      Ref: EnvironmentName

    NatGateway2:
        Type: AWS::EC2::NatGateway
        Properties:
            AllocationId:
                Fn::GetAtt: [ElasticIP2, AllocationId]
            SubnetId:
                Ref: PublicSubnet2
            Tags:
                - Key: Name
                  Value:
                      Ref: EnvironmentName

    PublicRouteTable:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:
                Ref: VPC
            Tags:
                - Key: Name
                  Value:
                      Ref: EnvironmentName

    DefaultPublicRoute:
        Type: AWS::EC2::Route
        DependsOn: PublicRouteTable
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            GatewayId:
                Ref: InternetGateway
            RouteTableId:
                Ref: PublicRouteTable

    PublicSubnetRouteTableAssociation1:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId:
                Ref: PublicSubnet1
            RouteTableId:
                Ref: PublicRouteTable

    PublicSubnetRouteTableAssociation2:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId:
                Ref: PublicSubnet2
            RouteTableId:
                Ref: PublicRouteTable

    PrivateRouteTable1:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:
                Ref: VPC
            Tags:
                - Key: Name
                  Value:
                      Ref: EnvironmentName

    PrivateRoute1:
        Type: AWS::EC2::Route
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId:
                Ref: NatGateway1
            RouteTableId:
                Ref: PrivateRouteTable1

    PrivateSubnetRouteTableAssociation1:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId:
                Ref: PrivateSubnet1
            RouteTableId:
                Ref: PrivateRouteTable1

    PrivateRouteTable2:
        Type: AWS::EC2::RouteTable
        Properties:
            VpcId:
                Ref: VPC
            Tags:
                - Key: Name
                  Value:
                      Ref: EnvironmentName

    PrivateRoute2:
        Type: AWS::EC2::Route
        Properties:
            DestinationCidrBlock: 0.0.0.0/0
            NatGatewayId:
                Ref: NatGateway2
            RouteTableId:
                Ref: PrivateRouteTable2

    PrivateSubnetRouteTableAssociation2:
        Type: AWS::EC2::SubnetRouteTableAssociation
        Properties:
            SubnetId:
                Ref: PrivateSubnet2
            RouteTableId:
                Ref: PrivateRouteTable2

Outputs:
        VPC:
          Description: This is VPC Outputs
          Value:
            Ref: VPC
          Export:
            Name: !Sub ${EnvironmentName}-VPC

        PublicSubnets: 
          Description: This are Pulbic Subents
          Value: !Join [",", [!Ref PublicSubnet1, !Ref PublicSubnet2]]
          Export:
            Name: !Sub ${EnvironmentName}-Public-Subnets

        PrivatecSubnets: 
          Description: This are Private Subents
          Value: !Join [",", [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
          Export:
            Name: !Sub ${EnvironmentName}-Private-Subnets

        PublicRouteTable: 
          Description: This is Public Route Table
          Value:
            Ref: PublicRouteTable
          Export:
            Name: !Sub ${EnvironmentName}-PublicRouteTable

        PrivateRouteTable1: 
          Description: This is Private Route Table1
          Value:
            Ref: PrivateRouteTable1
          Export:
            Name: !Sub ${EnvironmentName}-PrivateRouteTable1

        PrivateRouteTable2: 
          Description: This is Private Route Table2
          Value:
            Ref: PrivateRouteTable2
          Export:
            Name: !Sub ${EnvironmentName}-PrivateRouteTable2
